--- a/public/__forms.html
+++ b/public/__forms.html
@@ -5,8 +5,9 @@
     <form name="contact" data-netlify="true" hidden>
       <input type="hidden" name="form-name" value="contact" />
       <input name="name" type="text" />
-      <input name="email" type="text" />
-      <input name="message" type="text" />
+      <input name="email" type="email" />
+      <input name="company" type="text" />
+      <input name="telephone" type="text" />
     </form>
   </body>
 </html>
