--- a/public/__forms.html
+++ b/public/__forms.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    <form name="contact" data-netlify="true" hidden>
+    <form name="Subcontractor Form" data-netlify="true" hidden>
       <input type="hidden" name="form-name" value="contact" />
       <input name="name" type="text" />
       <input name="email" type="email" />
