--- a/public/__forms.html
+++ b/public/__forms.html
@@ -3,7 +3,7 @@
   <head></head>
   <body>
     <form name="Subcontractor Form" data-netlify="true" hidden>
-      <input type="hidden" name="form-name" value="contact" />
+      <input type="hidden" name="form-name" value="Subcontractor Form" />
       <input name="name" type="text" />
       <input name="email" type="email" />
       <input name="company" type="text" />
